--- a/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalDeposit.html
+++ b/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalDeposit.html
@@ -28,7 +28,7 @@
                                        readonly>
                             </div>
                             <div class="col-lg-6 mt-3">
-                                <label for="transactionAmountDeposit">Transaction Amount (VNĐ)</label>
+                                <label for="transactionAmountDeposit">Transaction Amount $</label>
                                 <input type="number" class="form-control" id="transactionAmountDeposit"
                                        name="transactionAmountDeposit">
                             </div>
