--- a/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalWithdraw.html
+++ b/spring-ajax-banking-location/src/main/webapp/WEB-INF/views/customer/modalWithdraw.html
@@ -26,7 +26,7 @@
                 <input type="text" class="form-control" id="balanceWithdraw" readonly>
               </div>
               <div class="col-lg-6 mt-3">
-                <label for="transactionAmountWithdraw">Transaction Amount (VNĐ)</label>
+                <label for="transactionAmountWithdraw">Transaction Amount $</label>
                 <input type="text" class="form-control" id="transactionAmountWithdraw"
                        name="transactionAmountWithdraw">
               </div>
